--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div>
     <div class="container">
       <div class="row">
-        <div class="col-2"></div>
+       
         <div class="col-2">
           <img class="drop-icons" src="./images/Group.png" alt="">
           <p class="lorem">lorem ipsum</p>
@@ -86,8 +86,8 @@
 
 
       <!-- <div class="conatiner"> -->
-      <div class="row2 d-flex">
-        <div class="col-4 mt-5">
+      <div class="row2  d-lg-flex d-md-flex">
+        <div class="col-lg-4 col-md-12 mt-5">
           <h2>
             Lorem ipsum, dolor sit amet consectetur
           </h2>
@@ -101,10 +101,10 @@
             aut, dolore possimus nam rerum nobis delectus dolorum perspiciatis dolorem officia quam? Ab, optio?
           </p>
         </div>
-        <div class="col-4 mt-5">
+        <div class="col-lg-4 col-md-12 mt-5">
           <img src="./images/Frame 5@2x.png" alt="" class="chair-image">
         </div>
-        <div class="col-4 mt-5">
+        <div class="col-lg-4 col-md-12 mt-5">
           <p class="mt-5 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem enim, deserunt alias
             asperiores, obcaecati vero perspiciatis earum exercitationem, aliquam voluptas laboriosam error a minus!
             Quibusdam maxime impedit aliquid nulla incidunt.</p>
@@ -117,19 +117,19 @@
           <h1 class="mt-5 p-3">OUR SERVICES</h1>
           <button type="button" class="btn btn-outline-dark h-25 mt-5">Read More >></button>
         </div>
-        <div class="row3 d-flex">
-          <div class="col-3 p-2">
+        <div class="row3 d-lg-flex d-md-flex">
+          <div class="col-lg-3 p-2  col-md-12">
             <img src="./images/Group 67-1.png" alt="" class="bottom-images">
           </div>
-          <div class="col-3 p-2">
+          <div class="col-lg-3 p-2  col-md-12">
             <img src="./images/Mask Group-1.png" alt="" class="bottom-image">
             <p class="bottom-p">Architectural Drawing</p>
           </div>
-          <div class="col-3 p-2">
+          <div class="col-lg-3 p-2  col-md-12">
             <img src="./images/BEB05076 1-3.png" alt="" class="bottom-image">
             <p class="bottom-p">Interior Fitout</p>
           </div>
-          <div class="col-3 p-2">
+          <div class="col-lg-3 p-2  col-md-12">
             <img src="./images/Mask Group.png" alt="" class="bottom-image">
             <p class="bottom-p">Joinery Services</p>
           </div>
